After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 705818 - wayland: fix a #warning
wayland: fix a #warning
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2013-08-12 08:18 UTC by Giovanni Campagna
Modified: 2013-08-13 07:44 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
wayland: fix a #warning (4.73 KB, patch)
2013-08-12 08:18 UTC, Giovanni Campagna
committed Details | Review

Description Giovanni Campagna 2013-08-12 08:18:01 UTC
Remove window_surfaces, as the FIXME asks for. We don't need it
because we can obtain the surface from the MetaWindow, and
follow the wayland compositor path for both types of clients.
Comment 1 Giovanni Campagna 2013-08-12 08:18:03 UTC
Created attachment 251326 [details] [review]
wayland: fix a #warning
Comment 2 Jasper St. Pierre (not reading bugmail) 2013-08-12 10:27:50 UTC
Review of attachment 251326 [details] [review]:

::: src/compositor/meta-shaped-texture.c
@@ +504,3 @@
 meta_shaped_texture_new_with_xwindow (Window xwindow)
 {
+  return g_object_new (META_TYPE_SHAPED_TEXTURE, NULL);

You now don't use "xwindow". Should we remove it entirely?
Comment 3 Giovanni Campagna 2013-08-13 07:44:01 UTC
Attachment 251326 [details] pushed as 03f55b9 - wayland: fix a #warning